# CV-lecture-quizzes-cpp

./: .gitignore
2A-L1/: .gitignore  CMakeLists.txt
2A-L1/include/: blend2images.h  colorPlanes.h
2A-L1/src/: blend2Images.cpp  colorPlanes.cpp  main.cpp
2A-L2/: .gitignore  CMakeLists.txt
2A-L2/src/: main.cpp
2A-L3/: .gitignore  CMakeLists.txt
2A-L3/include/: applyMedianFilter.h  exploreEdgeOptions.h
2A-L3/src/: applyMedianFilter.cpp  exploreEdgeOptions.cpp  main.cpp
2A-L4/: CMakeLists.txt
2A-L4/src/: findTemplate1D.cpp  findTemplate2D.cpp
2A-L5/: CMakeLists.txt
2A-L5/src/: gradientQuiz.cpp
2A-L6/: CMakeLists.txt
2A-L6/src/: forYourEyesOnly.cpp
